# after-eaton

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN_PLAN.md  LICENSE  METHODOLOGY.md  README.md
.claude/: settings.json
.github/workflows/: deploy.yml  pipeline.yml
pipeline/: .gitignore  PLAN.md  pyproject.toml
pipeline/scripts/: record_llm_fixtures.py
pipeline/src/after_eaton/: __init__.py  cli.py
pipeline/src/after_eaton/outputs/: csv_writer.py  geojson_writer.py  raw_writer.py  region_writer.py  summary_writer.py
pipeline/src/after_eaton/processing/: aggregate.py  description_parser.py  extraction_compare.py  join.py  llm_extraction.py  llm_prompts.py  llm_provider.py  normalize.py  parcel_analysis.py  spatial_aggregate.py
pipeline/src/after_eaton/qc/: aggregate.py  per_record.py  report.py
pipeline/src/after_eaton/sources/: arcgis.py  census.py  dins.py  epicla.py  fire_perimeter.py  schemas.py
pipeline/tests/: conftest.py  test_aggregate.py  test_cli_analyze.py  test_description_parser.py  test_extraction_compare.py  test_lfl_resolution.py  test_llm_extraction.py  test_llm_prompts.py  test_llm_provider.py  test_parcel_analysis.py  test_qc_spatial_invariants.py  test_spatial_aggregate.py
pipeline/tests/fixtures/llm/: 5828018010.json  5841026011.json  5845014011.json  5845016021.json
pipeline/tests/fixtures/qa/: 5829015008.json  5841009012.json  5842022003.json  5842024014.json
web/: .gitignore  .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts  (+3 more)
(+20 files in other folders)
